[FIX] mail: better align composer actions in chat window & mobile

--- a/addons/mail/static/src/core/common/composer.scss
+++ b/addons/mail/static/src/core/common/composer.scss
@@ -36,7 +36,7 @@
     }
 
     &.o-chatWindow .o-mail-Composer-mainActions {
-        margin-top: map-get($spacers, 1) / 4;
+        margin-top: map-get($spacers, 1) / 2;
     }
 
     &:not(.o-focused) {
